------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

January 18 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Corrected some bugs in the Win SDL port
	* The DOS port compiles again
	* Compiling is now twice as fast as before
	* Monoheaded and two two-headed mooses and two giant mushrooms added to char.pcx
	  by Kahvi
	* Breaking and fixing an item no longer destroys accustomization
	* Something that I forgot

January 18 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Smith now fixes damaged bodyparts if they are made from a metal
	* Bug with highscores corrected (makefiles)
	* CanThrow added to script
	* Handling Home,save and data directories changed
	* chameleon whip added
	* whip of thievery can be cloned
	
January 9 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Fixed a bug that sometimes prevented Haedlac from being teleported to aid
	  Petrus ere the final battle
	* Removed bulimia damage type
	* Greatly optimized the creation of sparkling and lightning-shooting objects
	* IVAN's total RAM usage on my system reduced from 30 Mb to 10 Mb
	* Binary initialization speeded up by 25%
	* The script now supports cumulative comments

January 5 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Player can no longer choke on his/her food

January 5 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* A floating eye can't make enemies faint if the they don't see it
	* Corrected a rounding error bug in the LOS code
	* Endurance changes affect current HP a little differently

January 5 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Lookmode now shows if a monster has panicked. (now works)
	
January 5 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
