@@ -5,3 +5,17 @@
 (s) suspended
 
 Fountains should never give permanent lycanthropy-state.
+Nefas shouldn't confuse plants. (maybe they should hit randomly characters around them)
+Healing should be terminated if player enters faint state.
+Attavus' bodypart fix doesn't work
+Odd message: "The greater carnivorous plant looks faster"
+Entering a dungeon and loading an autosave saves some time.
+Skeletons are probably seen by infravision.
+?Messages after teleport.
+"Valpurus shall not carry more continents!"
+Golden plate mails are worth less than iron ones.
+Wishing improvements
+It seems that due to certain bitshift rounding errors, resting causes more exp minus than pressing the NOP key.
+Remove the 3 letter limit for names.
+Amulet of Life saving generates high score entry.
+Explosions should be stopped by walls.
