@@ -1322,6 +1322,7 @@ Dungeon NEW_ATTNAM;
 		Square, Random NOT_IN_ROOM;
 		{
 			OTerrain = boulder;
+			Items == amulet(AMULET_OF_LIFE_SAVING);
 			Times = 25;
 		}
 
